--- a/NodeJs/package.json
+++ b/NodeJs/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "gabriel noya",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nanotimer": "^0.3.15",
+    "serialport": "^6.0.4"
+  }
 }
