--- a/NodeJs/package.json
+++ b/NodeJs/package.json
@@ -9,7 +9,9 @@
   "author": "gabriel noya",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.2",
     "nanotimer": "^0.3.15",
-    "serialport": "^6.0.4"
+    "serialport": "^6.0.4",
+    "socket.io": "^2.0.4"
   }
 }
