--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # Dependency directories
 NodeJs/node_modules/
 Juego/node_modules/
-
+Car Game/node_modules/
 # Typescript v1 declaration files
 typings/
 
